# QtPaintPlugin

./: .gitignore  CMakeLists.txt
plugin/TEST2/: CMakeLists.txt  GenericPlugin.cpp  GenericPlugin.hpp  TEST2.json
plugin/TextPlugin/: CMakeLists.txt  TextPlugin.cpp  TextPlugin.h  info.json  painterinterface.h
plugin/TextSharedPlugin/: CMakeLists.txt  TextSharedPlugin.cpp  TextSharedPlugin.h  TextSharedPlugin.qrc  info.json  paintersharedinterface.h
plugin/testPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.hpp  test.json  testPlugin_global.hpp
source/: canvas.cpp  canvas.h
source/entrypoint/qt/qtwidget/: main.cpp
source/pluginapi/: paintersharedinterface.h
ui/widgets/: mainwindow.cpp  mainwindow.hpp  mainwindow.ui
